lib_LTLIBRARIES = libacolib.la

#libacolib_la_HEADERS=  acolib.h
include_HEADERS= \
	acolib.h

libacolib_la_SOURCES= \
	$(include_HEADERS) \
	acolib.c

libacolib_la_CFLAGS = -Wall \
    -I @includedir@


#lib_LIBRARIES = libacolib.a
#SINGLE_PROCESSOR=$$(test $$(cat /proc/cpuinfo | grep ^processor | wc -l) -eq 1 && echo -DSINGLE_PROCESSOR)


#includeacolib_HEADERS= \
#	acocountstream.h \
#	acoreplistream.h \
#	acostream.h \
#	acotrace.h \
#	acolib.h
	
#includeacolibdir=$(includedir)
#/acolib

#libacolib_a_CFLAGS= $(SINGLE_PROCESSOR) -I$(includedir)

#libacolib_a_SOURCES= \
#	$(includeacolib_HEADERS) \
#	acocountstream.c \
#	acoreplistream.c \
#	acostream.c \
#	acolib.c 

