SINGLE_PROCESSOR=$$(test $$(cat /proc/cpuinfo | grep ^processor | wc -l) -eq 1 && echo -DSINGLE_PROCESSOR)


noinst_PROGRAMS = 
#\
#	acotest \
#	paracotest \
#	cesarcode \
#	tolower \
#	tolower2 \
#	tolower2g \
#	tolower2b \
#	acotrace2prv \
#	wordhash_serial \
#	wordhash_blocking \
#	wordhash_optimized	

#THREAD_LIB=-lpthread

#LIBS= $(THREAD_LIB)

#TEST_INCDIR= \
#	-I $(srcdir)/../src \
#	$(SINGLE_PROCESSOR)
	
#TEST_LDADD= \
#	../src/libacolib.a 


#wordhash_blocking_CPPFLAGS = $(TEST_INCDIR)

#wordhash_blocking_SOURCES = \
#	wordhash-blocking.c

#wordhash_blocking_LDADD = $(TEST_LDADD)
 

 
 

 

